--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,6 @@
+@import "mixins.scss";
 @import "variables.scss";
 @import "content.scss";
 @import "fonts.scss";
-@import "mixins.scss";
+
+@import "blocks/header.scss";
