--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,5 +2,6 @@
 @import "variables.scss";
 @import "content.scss";
 @import "fonts.scss";
+@import "animations.scss";
 
 @import "blocks/header.scss";
